[package]
name = "sc-api"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "A library to interact with the SC API"
repository = "https://github.com/JustAGod1/sc-api-rs"
documentation = "https://github.com/JustAGod1/sc-api-rs"
keywords = ["sc", "api", "sc-api", "api-client"]
categories = ["api-bindings"]

[dependencies]
reqwest = "0.11.4"
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
url = "2.3.1"
async-mutex = "1.4.0"

[dev-dependencies]
tokio = { version = "1.24.2", features = ["full"] }

